--- a/tariffs.html
+++ b/tariffs.html
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="container header__container">
          <div class="header__left">
-          <a href="http://agetta0.tmweb.ru/home.html" class="logo">
+          <a href="./home.html" class="logo">
             <img src="./img/logo-fig.png" class="logo__img" alt="Воркадиум">
           </a>
          </div>
@@ -128,19 +128,19 @@
               <ul class="menu__list">
                 <li class="menu__item">
                     
-                  <a href="http://agetta0.tmweb.ru/home.html" class="menu__link">
+                  <a href="./home.html" class="menu__link">
                     <div class="menu__icon menu__icon-main "></div> 
                     <div class="menu__title">Главная</div>  
                   </a>
                 </li>
                 <li class="menu__item ">
-                  <a href="http://agetta0.tmweb.ru/reviews.html" class="menu__link">
+                  <a href="./reviews.html" class="menu__link">
                     <div class="menu__icon menu__icon-feed"></div>
                     <div class="menu__title">Отзывы</div>
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a href="http://agetta0.tmweb.ru/tariffs.html" class="menu__link active">
+                  <a href="./tariffs.html" class="menu__link active">
                     <div class="menu__icon menu__icon-wallet"></div>
                     <div class="menu__title">Тарифы</div>
                   </a>
@@ -305,7 +305,7 @@
       </div>
   
       <div class="footer__col footer__col_mid">
-        <a href="http://agetta0.tmweb.ru/home.html" class="footer__logo">
+        <a href="./home.html" class="footer__logo">
           <img src="./img/logo-fig.png" class="logo__img" alt="Воркадиум">
         </a>
       </div>
