--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
       <header class="header header--main">
         <div class="container header__container">
           <div class="header__left">
-            <a href="http://agetta0.tmweb.ru/home.html" class="logo">
+            <a href="./home.html" class="logo">
               <img src="./img/logo-fig.png" class="logo__img" alt="Воркадиум">
             </a>
           </div>
@@ -31,19 +31,19 @@
             <nav class="menu menu--home">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="http://agetta0.tmweb.ru/home.html" class="menu__link menu__link-home active">
+                  <a href="./home.html" class="menu__link menu__link-home active">
                     <div class="menu__icon icon-main  "></div>
                     <div class="menu__title">Главная</div>
                   </a>
                 </li>
                 <li class="menu__item ">
-                  <a href="http://agetta0.tmweb.ru/reviews.html" class="menu__link menu__link-home">
+                  <a href="./reviews.html" class="menu__link menu__link-home">
                     <div class="menu__icon icon-feed"></div>
                     <div class="menu__title">Отзывы</div>
                   </a>
                 </li>
                 <li class="menu__item">
-                  <a href="http://agetta0.tmweb.ru/tariffs.html" class="menu__link menu__link-home">
+                  <a href="./tariffs.html" class="menu__link menu__link-home">
                     <div class="menu__icon icon-wallet "></div>
                     <div class="menu__title">Тарифы</div>
                   </a>
@@ -321,7 +321,7 @@
       </div>
 
       <div class="footer__col footer__col_mid">
-        <a href="http://agetta0.tmweb.ru/home.html" class="footer__logo">
+        <a href="./home.html" class="footer__logo">
           <img src="./img/logo-fig.png" class="logo__img" alt="Воркадиум">
         </a>
       </div>
