--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="welcome__logo">
           <img src="./img/logo.png" alt="" class="welcome__logo-img">
         </div>
-        <a href="http://agetta0.tmweb.ru/home.html" class="welcome__link"> Перейти на сайт</a>
+        <a href="./home.html" class="welcome__link"> Перейти на сайт</a>
       </div>
     </div>
   </div>
